fixed sizes on mobile

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -1,3 +1,7 @@
+.container {
+    padding: 0 17px;
+}
+
 .quizes {
     width: 100%;
     margin-left: 18px;
